<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F282D"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.DetailActivity">

    <ScrollView
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_width="match_parent"
      android:fillViewport="true"
      android:layout_height="wrap_content">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">


          <ImageView
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:src="@drawable/poster_gotham"
              android:id="@+id/img_cover"
              android:scaleType="centerInside"
              android:layout_width="match_parent"
              android:layout_height="250dp"
              android:contentDescription="@string/todo" />

          <TextView
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:id="@+id/title_movie"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:lines="2"
              android:minLines="1"
              tools:text="@string/dummy_movie_title"
              android:textColor="@color/white"
              android:textSize="25sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/img_cover" />

          <TextView
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:id="@+id/txt_release_date"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              tools:text="@string/dummy_movie_date"
              android:textColor="@color/white"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/title_movie" />

          <HorizontalScrollView
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:id="@+id/action_list"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@id/txt_release_date"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

              <LinearLayout

                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

                  <at.grabner.circleprogress.CircleProgressView
                      android:layout_margin="5dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:background="@drawable/ic_lens_black_24dp"
                      android:id="@+id/scoreView"
                      android:layout_width="60dp"
                      android:layout_height="60dp"
                      CircleProgressView:cpv_autoTextSize="true"
                      CircleProgressView:cpv_barColor="#21D07A"
                      CircleProgressView:cpv_barWidth="7dp"
                      CircleProgressView:cpv_innerContourSize="0dp"
                      CircleProgressView:cpv_maxValue="100"
                      CircleProgressView:cpv_outerContourSize="3dp"
                      CircleProgressView:cpv_rimColor="#204529"
                      CircleProgressView:cpv_rimWidth="8dp"
                      CircleProgressView:cpv_showUnit="true"
                      CircleProgressView:cpv_spinColor="@color/primary"
                      CircleProgressView:cpv_textColor="@color/icons"
                      CircleProgressView:cpv_textScale="1"
                      CircleProgressView:cpv_unit="%"
                      CircleProgressView:cpv_unitColor="@color/icons"
                      CircleProgressView:cpv_unitPosition="right_top"
                      CircleProgressView:cpv_unitScale="1"
                      CircleProgressView:cpv_value="48" />

                  <TextView
                      android:textColor="@color/white"
                      android:layout_gravity="center_vertical"
                      android:text="@string/user_score"
                      android:textSize="15sp"
                      android:textStyle="bold"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />

                  <ImageView
                      android:layout_gravity="center_vertical"
                      android:layout_margin="5dp"
                      android:padding="@dimen/icon_circled_size"
                      android:src="@drawable/ic_format_list_bulleted_white_24dp"
                      android:background="@drawable/circle_with_border"
                      android:layout_width="@dimen/medium_circle_action"
                      android:layout_height="@dimen/medium_circle_action"
                      android:contentDescription="@string/todo" />

                  <ImageView
                      android:layout_gravity="center_vertical"
                      android:layout_margin="5dp"
                      android:padding="@dimen/icon_circled_size"
                      android:src="@drawable/ic_heart_white"
                      android:background="@drawable/circle_with_border"
                      android:layout_width="@dimen/medium_circle_action"
                      android:layout_height="@dimen/medium_circle_action"
                      android:contentDescription="@string/todo" />

                  <ImageView
                      android:layout_gravity="center_vertical"
                      android:layout_margin="5dp"
                      android:padding="@dimen/icon_circled_size"
                      android:src="@drawable/ic_bookmark_border_black_24dp"
                      android:background="@drawable/circle_with_border"
                      android:layout_width="@dimen/medium_circle_action"
                      android:layout_height="@dimen/medium_circle_action"
                      android:contentDescription="@string/todo" />

                  <ImageView
                      android:layout_gravity="center_vertical"
                      android:layout_margin="5dp"
                      android:padding="@dimen/icon_circled_size"
                      android:src="@drawable/ic_grade_white_24dp"
                      android:background="@drawable/circle_with_border"
                      android:layout_width="@dimen/medium_circle_action"
                      android:layout_height="@dimen/medium_circle_action"
                      android:contentDescription="@string/todo" />


              </LinearLayout>

          </HorizontalScrollView>

          <TextView
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:layout_marginTop="8dp"
              android:id="@+id/title_overview"
              app:layout_constraintTop_toBottomOf="@id/action_list"
              android:text="@string/overview"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="parent"
              android:textColor="@color/white"
              android:textSize="20sp"
              android:layout_width="0dp"
              android:layout_height="wrap_content" />

          <TextView
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:id="@+id/movie_overview"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@id/title_overview"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_width="0dp"
              android:textColor="@color/white"
              tools:text="@string/dummy_movie_overview"
              android:layout_height="wrap_content" />


      </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>